# weather-mcp-server

./: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml
mcp-client/: client.py  pyproject.toml
weather/: weather.py
weather_mcp_server/: __init__.py  __main__.py
