[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "Weather MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.uv.workspace]
members = [
    "weather",
    "mcp-client",
]
